--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>About</title>
     <link rel="stylesheet" href="css/style.css" />
     <script
       src="https://kit.fontawesome.com/132f6e9003.js"
@@ -17,8 +17,8 @@
       </a>
       <nav>
         <ul>
-          <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html" class="active">About</a></li>
           <li><a href="skills.html">Skills</a></li>
           <li><a href="projects.html">Projects</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -27,19 +27,24 @@
     </header>
     <main>
       <div class="container">
-        <h1 class="heading">I'm Pasang Dorje Lama</h1>
-        <h3 class="sub-heading">A Web Developer</h3>
+        <h1 class="heading">About.</h1>
         <p class="description">
-          Bringing imaginations into the screen. I am a web developer with a
-          passion for crafting visually stunning and user-friendly websites.
+          A graduate in Bachelors of Computer Science and currently pursuing
+          masters degree in Information Technology. Please feel free to go
+          through my resume.
+        </p>
+        <img id="resume" src="images/CV.png" alt="resume" />
+        <p class="description">
+          Convinced to hire me?
+          <a href="Resume-Pasang Dorje Lama.pdf" download>Download</a>
         </p>
       </div>
     </main>
     <footer>
       <div class="container">
         <div id="goto-link">
-          <a href="about.html"
-            >Explore me <i class="fa-solid fa-arrow-right"></i>
+          <a href="index.html">
+            Back to home <i class="fa-solid fa-arrow-right"></i>
           </a>
         </div>
         <ul>
