--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,97 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+    <script src="js/form.js" defer></script>
+    <script
+      src="https://kit.fontawesome.com/132f6e9003.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <a href="index.html">
+        <img src="images/logo.png" />
+      </a>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="skills.html">Skills</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="contact.html" class="active">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <div class="container">
+        <h1 class="heading">Contact.</h1>
+        <h3 class="sub-heading">Getting in touch is easy!</h3>
+        <p class="description">
+          Just send me an email at
+          <a href="mailto:pasangdorje.lama0930@gmail.com"
+            >pasangdorje.lama0930@gmail.com</a
+          >
+          or call me at <a>+61 0433 420 433</a>
+        </p>
+        <p class="description">
+          Or you can fill up the form below and submit to send it to me.
+        </p>
+        <form id="contactForm" onsubmit="return validateForm()">
+          <input id="name" type="text" placeholder="Your name" />
+          <span id="nameErrorMsg" class="error-msg"></span>
+          <input id="email" type="email" placeholder="Your email" />
+          <span id="emailErrorMsg" class="error-msg"></span>
+          <textarea
+            id="feedback"
+            placeholder="Your message or questions"
+          ></textarea>
+          <span id="feedbackErrorMsg" class="error-msg"></span>
+          <input id="submitBtn" type="submit" value="Send" />
+        </form>
+      </div>
+    </main>
+    <footer>
+      <div class="container">
+        <div id="goto-link">
+          <a href="index.html">
+            Back to home <i class="fa-solid fa-arrow-right"></i>
+          </a>
+        </div>
+        <ul>
+          <li>
+            <a
+              target="_blank"
+              rel="noopener"
+              href="https://gitlab.com/pasangdorje.lama0930"
+              title="Gitlab profile"
+            >
+              <i class="fa-brands fa-gitlab"></i>
+            </a>
+          </li>
+          <li>
+            <a
+              target="_blank"
+              rel="noopener"
+              href="https://github.com/pasangdorje"
+              title="Github profile"
+            >
+              <i class="fa-brands fa-github"></i>
+            </a>
+          </li>
+          <li>
+            <a
+              target="_blank"
+              rel="noopener"
+              href="https://www.linkedin.com/in/pasang-dorje-lama-0a0610130/"
+              title="Linkedin profile"
+            >
+              <i class="fa-brands fa-linkedin-in"></i
+            ></a>
+          </li>
+        </ul>
+      </div>
+    </footer>
+  </body>
 </html>
