--- a/skills.html
+++ b/skills.html
@@ -28,7 +28,9 @@
     <main>
       <div class="container">
         <h1 class="heading">Skills.</h1>
-        <p class="description"></p>
+        <p class="description">
+          Following are the web development technology that I am familiar to.
+        </p>
         <ul id="skillList">
           <li>
             <img
@@ -36,10 +38,19 @@
               title="Bootstrap"
               alt="Bootstrap"
             />
+            <div class="skill-label">Bootstrap</div>
           </li>
-          <li><img src="images/skills/css-3.svg" title="CSS3" alt="CSS3" /></li>
+          <li>
+            <img src="images/skills/css-3.svg" title="CSS3" alt="CSS3" />
+            <div class="skill-label">CSS3</div>
+          </li>
+          <li>
+            <img src="images/skills/scss.svg" title="Scss" alt="Scss" />
+            <div class="skill-label">Scss</div>
+          </li>
           <li>
             <img src="images/skills/html-5.svg" title="HTML5" alt="HTML5" />
+            <div class="skill-label">HTML5</div>
           </li>
           <li>
             <img
@@ -47,41 +58,7 @@
               title="Javascript"
               alt="Javascript"
             />
-          </li>
-          <li>
-            <img src="images/skills/react.svg" title="React" alt="React" />
-          </li>
-          <li>
-            <img
-              src="images/skills/angular.svg"
-              title="Angular"
-              alt="Angular"
-            />
-          </li>
-          <li>
-            <img src="images/skills/nextjs.svg" title="Nextjs" alt="Nextjs" />
-          </li>
-          <li><img src="images/skills/java.svg" title="Java" alt="Java" /></li>
-          <li>
-            <img src="images/skills/jquery.svg" title="Jquery" alt="Jquery" />
-          </li>
-          <li>
-            <img src="images/skills/node-js.svg" title="Nodejs" alt="Nodejs" />
-          </li>
-          <li><img src="images/skills/scss.svg" title="Scss" alt="Scss" /></li>
-          <li>
-            <img
-              src="images/skills/springboot.svg"
-              title="Springboot"
-              alt="Springboot"
-            />
-          </li>
-          <li>
-            <img
-              src="images/skills/tailwind.svg"
-              title="Tailwind"
-              alt="Tailwind"
-            />
+            <div class="skill-label">Javascript</div>
           </li>
           <li>
             <img
@@ -89,6 +66,51 @@
               title="Typescript"
               alt="Typescript"
             />
+            <div class="skill-label">Typescript</div>
+          </li>
+          <li>
+            <img src="images/skills/react.svg" title="React" alt="React" />
+            <div class="skill-label">React</div>
+          </li>
+          <li>
+            <img
+              src="images/skills/angular.svg"
+              title="Angular"
+              alt="Angular"
+            />
+            <div class="skill-label">Angular</div>
+          </li>
+          <li>
+            <img src="images/skills/nextjs.svg" title="Nextjs" alt="Nextjs" />
+            <div class="skill-label">Nextjs</div>
+          </li>
+          <li>
+            <img src="images/skills/java.svg" title="Java" alt="Java" />
+            <div class="skill-label">Java</div>
+          </li>
+          <li>
+            <img src="images/skills/jquery.svg" title="Jquery" alt="Jquery" />
+            <div class="skill-label">Jquery</div>
+          </li>
+          <li>
+            <img src="images/skills/node-js.svg" title="Nodejs" alt="Nodejs" />
+            <div class="skill-label">Nodejs</div>
+          </li>
+          <li>
+            <img
+              src="images/skills/springboot.svg"
+              title="Springboot"
+              alt="Springboot"
+            />
+            <div class="skill-label">Springboot</div>
+          </li>
+          <li>
+            <img
+              src="images/skills/tailwind.svg"
+              title="Tailwind"
+              alt="Tailwind"
+            />
+            <div class="skill-label">Tailwind</div>
           </li>
         </ul>
       </div>
